# theatre-django

./: .env.dev  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  env.dev.tmpl  makefile  pyproject.toml  requirements.txt  theatre_main
_configs/app/: Dockerfile
_configs/nginx/: default.conf
_project/: settings.py  urls.py  wsgi.py
_project/settings/: core_settings.py
certificates/: admin.py
config/: settings.py  urls.py  views.py
halls/: admin.py  views.py
halls/migrations/: 0001_initial.py
histories/: admin.py  apps.py  views.py
media/json/: seats-2021-10-18-04-18-15-803628.json  seats-2021-10-20-06-38-33-934815.json
museum/: models.py
museum/migrations/: 0001_initial.py
news/: views.py
news/migrations/: 0001_initial.py
nginx/: default.conf
partners/: apps.py  urls.py  views.py
partners/migrations/: 0001_initial.py
people/: urls.py  views.py
perfomances/: admin.py  apps.py  models.py  urls.py  views.py
perfomances/migrations/: 0001_initial.py
posters/: models.py  urls.py  views.py
posters/migrations/: 0001_initial.py
press/: urls.py
projects/: apps.py  models.py
radio/: apps.py  views.py
radio/migrations/: 0001_initial.py  0002_alter_category_options.py
src/: entrypoint.sh
src/_project/: asgi.py  urls.py  views.py
src/certificates/: apps.py  models.py
src/halls/: apps.py  models.py  urls.py
src/histories/: models.py  urls.py
src/museum/: admin.py  apps.py
src/news/: admin.py  apps.py  models.py  urls.py
template/: base.html
tours/: admin.py  models.py
utils/: uploaders.py
(+96 files in other folders)
