[tool.poetry]
name = "theatre-django"
version = "0.1.0"
description = ""
authors = ["Aleksey Maryaskin <maryaskin.a.v@gmail.com>"]
readme = "README.md"
packages = [{include = "theatre_django"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.7"
django-cors-headers = "4.3.1"
django-sortedm2m = "3.1.1"
gunicorn = "21.2.0"
pillow = "10.1.0"
psycopg2-binary = "2.9.9"
pytz = "2021.3"
environs = "10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
